--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,13 @@
 
 en:
   hello: "Hello world"
+
+
+en:
+  views:
+    pagination:
+      previous: "&laquo; Anterior"
+      next: "Siguiente &raquo;"
+      first: "Primero"
+      last: "Final"
+      truncate: "..."
